flux/apps/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  labels:
    app.kubernetes.io/name: ingress
  name: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  labels:
    app.kubernetes.io/name: ingress
  name: gateway
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      hostname: "*.stehessel.org"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: "*.stehessel.org"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: stehessel-org-tls
    # - name: syncthing-tcp
    #   protocol: TCP
    #   port: 22000
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    # - name: syncthing-udp
    #   protocol: UDP
    #   port: 22000
    #   allowedRoutes:
    #     namespaces:
    #       from: All
