flux/apps/gateway/auth.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  labels:
    app.kubernetes.io/name: ingress
  name: oidc
spec:
  jwt:
    providers:
      - name: auth0
        audiences: ["ogY2U57PpLPzIEMDq0Tnd5BfBKOEQeDx"]
        claimToHeaders:
          - claim: email
            header: X-Auth-Request-Email
          - claim: nickname
            header: X-Auth-Request-User
          - claim: nickname
            header: X-Auth-Request-Preferred-Username
        extractFrom:
          cookies: ["IdToken-63b6f6de"]
        issuer: https://stehessel.eu.auth0.com/
        remoteJWKS:
          uri: https://stehessel.eu.auth0.com/.well-known/jwks.json
  oidc:
    provider:
      issuer: https://stehessel.eu.auth0.com
    clientID: ogY2U57PpLPzIEMDq0Tnd5BfBKOEQeDx
    clientSecret:
      name: oidc-auth0
    scopes:
      - email
      - profile
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: ingress
