flux/apps/gateway/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  labels:
    app.kubernetes.io/name: envoy-gateway
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: http
  hostnames:
    - "*.stehessel.org"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            port: 443
            scheme: https
            statusCode: 301
